<resources>
    <string name="app_name">Birthday Buddy</string>
    <string name="undo">Undo</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="apply">Apply</string>
    <string name="cntnue">Continue</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="abort">Abort</string>
    <string name="today">today</string>
    <string name="noEntries">No entries :(</string>
    <string name="noEventsFound">No events found :(</string>
    <string name="necessary">(necessary)</string>
    <string-array name="month_names">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="event_property_days">Days</string>
    <string name="event_property_years">Years</string>
    <string name="event_property_year">Year</string>
    <string name="event_property_turns">turns</string>
    <string name="event_property_date">Date</string>
    <string name="event_property_forename">Forename</string>
    <string name="event_property_surname">Surname</string>
    <string name="event_property_nickname">Nickname</string>
    <string name="event_property_note">Note</string>
    <string name="event_type_birthday">Birthday</string>
    <string name="event_type_annual_event">Annual event</string>
    <string name="event_type_one_time_event">One time event</string>
    <string name="alert_dialog_missing_avatar_img_title">Error when trying to load image!</string>
    <string name="alert_dialog_missing_avatar_img_text">There occurred an error when trying to load an avatar image.\nThe image reference is going to be deleted.</string>
    <string name="toolbar_title_add_birthday">Add new birthday</string>
    <string name="toolbar_title_edit_birthday">Edit birthday</string>
    <string name="future_birthday_error">You can\'t add future birthdays!\nPlease only use birthday dates in the past.</string>
    <string name="empty_fields_error_birthday">Make sure to fill fields forename and date!</string>
    <string name="person_added_notification">Birthday added</string>
    <string name="person_changed_notification">Birthday changed</string>
    <string name="person_deleted_notification">Birthday deleted</string>
    <string name="btn_birthday_delete">Delete birthday</string>
    <string name="verification_edit_date_input">The date input does not match the required date format!\nPlease use a format like: %1$s</string>
    <string name="avatar_btn_clicked_menu_item_select_photo">Choose from gallery</string>
    <string name="avatar_btn_clicked_menu_item_delete_photo">Remove photo</string>
    <string name="alert_dialog_title_delete_birthday">Delete birthday</string>
    <string name="alert_dialog_body_message">Are you sure you want to delete this birthday?</string>
    <string name="intent_share_chooser_title">Choose your app to share</string>
    <string name="person_show_date">Born on %1$s</string>
    <string name="person_days_until_today">The birthday of %1$s is today!</string>
    <plurals name="person_days_until">
        <item quantity="one">Next birthday of %1$s is in %2$d day on %3$s</item>
        <item quantity="other">Next birthday of %1$s is in %2$d days on %3$s.\nThis is in %4$s weeks.</item>
    </plurals>
    <plurals name="person_years_old">
        <item quantity="one">%1$s turns %2$d</item>
        <item quantity="other">%1$s turns %2$d</item>
    </plurals>
    <string name="share_birthday_name">%1$s</string>
    <string name="share_birthday_date_start">Born on: %1$s</string>
    <string name="share_birthday_date_next">Next birthday: %1$s</string>
    <string name="share_birthday_days_today">That is today!</string>
    <plurals name="share_birthday_days">
        <item quantity="one">In %1$d day</item>
        <item quantity="other">In %1$d days</item>
    </plurals>
    <string name="notification_title_birthday">%1$s</string>
    <string name="notification_content_birthday_future">The birthday of %1$s is in %2$d days.</string>
    <string name="notification_content_birthday_tomorrow">The birthday of %1$s is tomorrow!</string>
    <string name="notification_content_birthday_today">The birthday of %1$s is TODAY!</string>
    <string name="notification_content_birthday_years_old">%1$s turns %2$d</string>
    <string name="toolbar_title_add_annual_event">Add new annual event</string>
    <string name="toolbar_title_edit_annual_event">Edit annual event</string>
    <string name="future_annual_event_error">You can\'t add future annual event!</string>
    <string name="empty_fields_error_annual_event">Make sure to fill fields name and date!</string>
    <string name="annual_event_added_notification">%1$s added</string>
    <string name="annual_event_changed_notification">%1$s changed</string>
    <string name="annual_event_deleted_notification">%1$s deleted</string>
    <string name="edit_annual_event_name_hint">Event name</string>
    <string name="btn_annual_event_delete">Delete annual event</string>
    <string name="alert_dialog_body_message_annual_event">Are you sure you want to delete this annual event?</string>
    <string name="annual_event_start_date">Started on %1$s</string>
    <string name="annual_event_show_date_tomorrow">Next time tomorrow on %1$s!</string>
    <string name="annual_event_show_date_today">%1$s is TODAY!</string>
    <plurals name="annual_event_show_date">
        <item quantity="one">Next time in %1$d day on %2$s</item>
        <item quantity="other">Next time in %1$d days on %2$s.\nThis is in %3$s weeks.</item>
    </plurals>
    <plurals name="annual_event_years">
        <item quantity="one">For the first time since starting!</item>
        <item quantity="other">For the %1$d. time since starting!</item>
    </plurals>
    <string name="share_annual_event_name">%1$s</string>
    <string name="share_annual_event_date_next">Next on: %1$s</string>
    <string name="share_annual_event_date_start">First on: %1$s</string>
    <plurals name="share_annual_event_days">
        <item quantity="one">In %1$d day</item>
        <item quantity="other">In %1$d days</item>
    </plurals>
    <plurals name="share_annual_event_year">
        <item quantity="one">Since %1$d year</item>
        <item quantity="other">Since %1$d years</item>
    </plurals>
    <string name="notification_title_annual_event">%1$s</string>
    <string name="notification_content_annual_event_future">%1$s is in %2$d days</string>
    <string name="notification_content_annual_event_tomorrow">%1$s is tomorrow!</string>
    <string name="notification_content_annual_event_today">%1$s is TODAY!</string>
    <string name="toolbar_title_add_one_time_event">Add new one-time event</string>
    <string name="toolbar_title_edit_one_time_event">Edit one-time event</string>
    <string name="error_past_one_time_event_error">You can only add one-time events which are in the future!</string>
    <string name="one_time_event_added_notification">%1$s added</string>
    <string name="one_time_event_changed_notification">%1$s changed</string>
    <string name="one_time_event_deleted_notification">%1$s deleted</string>
    <string name="edit_one_time_event_name_hint">Event name</string>
    <string name="btn_one_time_event_delete">Delete one-time event</string>
    <string name="alert_dialog_body_message_one_time_event">Are you sure you want to delete this one-time event?</string>
    <string name="one_time_event_today">is TODAY!</string>
    <string name="one_time_event_tomorrow">is tomorrow!</string>
    <plurals name="one_time_event_show_date">
        <item quantity="one">in %1$d day on %2$s</item>
        <item quantity="other">in %1$d days on %2$s.\nThis is in %3$s weeks.</item>
    </plurals>
    <plurals name="one_time_event_years">
        <item quantity="one">In %1$d year</item>
        <item quantity="other">In %1$d years</item>
    </plurals>
    <string name="share_one_time_event_name">%1$s</string>
    <string name="share_one_time_event_date_next">On %1$s</string>
    <string name="share_one_time_event_days_today">That is today!</string>
    <plurals name="share_one_time_event_days">
        <item quantity="one">That is in %1$d day</item>
        <item quantity="other">That is in %1$d days</item>
    </plurals>
    <plurals name="share_one_time_event_year">
        <item quantity="one">In %1$d year</item>
        <item quantity="other">In %1$d years</item>
    </plurals>
    <string name="notification_title_one_time_event">%1$s</string>
    <string name="notification_content_one_time_event_future">%1$s is in %2$d days</string>
    <string name="notification_content_one_time_event_tomorrow">%1$s is tomorrow!</string>
    <string name="notification_content_one_time_event_today">%1$s is TODAY!</string>
    <string name="tv_notification_interval_month">Month before</string>
    <string name="tv_notification_interval_week">Week before</string>
    <string name="tv_notification_interval_day">Day before</string>
    <string name="tv_notification_interval_eventday">Eventday</string>
    <string name="notification_channel_name" translatable="false">BirthdayBuddyNotification</string>
    <string name="notification_channel_description">Notifies the user about events</string>
    <string-array name="light_modes">
        <item>no light</item>
        <item>white</item>
        <item>red</item>
        <item>green</item>
        <item>blue</item>
    </string-array>
    <string name="settings_extra_title_delete_all">Delete all data</string>
    <string name="settings_extra_title_export">Save data</string>
    <string name="settings_extra_title_import">Import data</string>
    <string name="settings_title_notifications">Notifications</string>
    <string name="settings_title_sound">Sound</string>
    <string name="settings_title_vibration">Vibration</string>
    <string name="settings_title_notification_time">Notification time</string>
    <string name="settings_title_notification_day">Notification day</string>
    <string name="dialog_title_notification_light">Notification light</string>
    <string name="delete_all_dialog_title">Delete all Data?</string>
    <string name="delete_all_dialog_body">Are you sure you want delete all of your event data?</string>
    <string name="delete_all_dialog_confirmation">All events have been deleted</string>
    <string name="setting_use_calendarview">Use a calendar view for date</string>
    <string name="searching_toolbar_title">Search for: %1$s</string>
    <string name="searching_toolbar_actionview_hint">Search</string>
    <string name="main_menu_item_about">About</string>
    <string name="main_menu_item_help">Help</string>
    <string name="fab_event_list_birthday_title">New birthday</string>
    <string name="fab_event_list_annual_event_title">New annual event</string>
    <string name="fab_event_list_one_time_event_title">New one-time event</string>
    <string name="settings_title">Settings</string>
    <string name="about_title_version">Version</string>
    <string name="about_title_appName">App name</string>
    <string name="about_title_buildNumber">Build number</string>
    <string name="about_title_license">License</string>
    <string name="about_title_openSource">OpenSource</string>
    <string name="about_title_contactInformation">Contact</string>
    <string name="about_title_thanks">Acknowledgments</string>
    <string name="about_content_license">This app underlies the terms and conditions of the GNU General Public License v3.0.\nFor more detailed information read this: https://www.gnu.org/licenses/gpl-3.0.en.html</string>
</resources>