<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".fragments.AnnualEventInstanceFragment">


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:maxLength="25"
                    android:id="@+id/edit_add_fragment_name_annual_event"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:hint="@string/edit_annual_event_name_hint"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@color/dark"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_add_fragment_date_annual_event"
                    android:textSize="@dimen/larger_text_size"
                    android:hint="@string/event_property_date"
                    style="@android:style/Widget.Holo.Light.Spinner"
                    app:layout_constraintStart_toStartOf="@+id/edit_add_fragment_name_annual_event"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/edit_add_fragment_name_annual_event"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/sw_is_year_given_annual_event"
                    android:textColor="@color/dark"/>

            <Switch
                    android:text="@string/event_property_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sw_is_year_given_annual_event"
                    android:checked="true"
                    android:showText="false"
                    android:splitTrack="false"
                    app:layout_constraintEnd_toEndOf="@+id/edit_add_fragment_name_annual_event"
                    app:layout_constraintTop_toTopOf="@+id/edit_add_fragment_date_annual_event"
                    app:layout_constraintBottom_toBottomOf="@+id/edit_add_fragment_date_annual_event"
                    android:textColor="#808080"/>

            <Button
                    android:text="@string/btn_annual_event_delete"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_fragment_annual_event_instance_delete"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/edit_add_fragment_note_annual_event"
                    android:layout_marginBottom="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/edit_add_fragment_note_annual_event"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/edit_add_fragment_date_annual_event"
                    app:layout_constraintEnd_toEndOf="@+id/sw_is_year_given_annual_event"
                    app:layout_constraintStart_toStartOf="@+id/edit_add_fragment_date_annual_event"
                    android:hint="@string/event_property_note"
                    android:textColor="@color/dark"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>