<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_settings_notification_annual"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    app:cardElevation="2dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    app:contentPadding="4dp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout_card_view_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Title" />

        <Switch
            android:id="@+id/sw_settings_notifcations"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:checked="true"
            android:text="@string/settings_title_notifications"
            android:textColor="@color/textVeryDark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_settings_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_settings_title" />

        <Switch
            android:id="@+id/sw_settings_sound"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:checked="true"
            android:text="@string/settings_title_sound"
            android:textColor="@color/textVeryDark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/sw_settings_notifcations"
            app:layout_constraintStart_toStartOf="@+id/sw_settings_notifcations"
            app:layout_constraintTop_toBottomOf="@+id/sw_settings_notifcations" />

        <Switch
            android:id="@+id/sw_settings_vibration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:checked="true"
            android:text="@string/settings_title_vibration"
            android:textColor="@color/textVeryDark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/sw_settings_sound"
            app:layout_constraintStart_toStartOf="@+id/sw_settings_sound"
            app:layout_constraintTop_toBottomOf="@+id/sw_settings_sound" />

        <TextView
            android:id="@+id/tv_settings_notification_time_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/settings_title_notification_time"
            android:textColor="@color/textVeryDark"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/sw_settings_vibration"
            app:layout_constraintTop_toBottomOf="@+id/sw_settings_vibration" />

        <TextView
            android:id="@+id/tv_settings_notificaton_time_value"
            style="@android:style/Widget.Holo.Spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:clickable="true"
            android:focusable="true"
            android:textAlignment="center"
            android:textColor="@color/darkGrey"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_settings_notification_time_title"
            app:layout_constraintEnd_toEndOf="@+id/sw_settings_vibration"
            app:layout_constraintStart_toEndOf="@+id/tv_settings_notification_time_title"
            app:layout_constraintTop_toTopOf="@+id/tv_settings_notification_time_title"
            tools:text="12:00" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constrLayout_settings_notification_day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_settings_notificaton_time_value">

            <TextView
                android:id="@+id/tv_settings_notification_day_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/settings_title_notification_day"
                android:textColor="@color/textVeryDark"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_settings_notification_day_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="4dp"
                android:textColor="@color/textDark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_settings_notification_day_title"
                tools:text="Eventday\nWeek before" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraint_layout_settings_notification_light"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:focusable="true"
            android:paddingBottom="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/constrLayout_settings_notification_day"
            app:layout_constraintStart_toStartOf="@+id/constrLayout_settings_notification_day"
            app:layout_constraintTop_toBottomOf="@+id/constrLayout_settings_notification_day">

            <TextView
                android:id="@+id/tv_settings_notification_light_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/dialog_title_notification_light"
                android:textColor="@color/textVeryDark"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_settings_notification_light_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="4dp"
                android:textColor="@color/textDark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_settings_notification_light_title"
                tools:text="White" />
        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>